<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:background="#ffffff">

<android.support.v7.widget.Toolbar
android:id="@+id/toolbar"
android:layout_width="match_parent"
android:layout_height="?attr/actionBarSize"
android:background="@color/colorPrimary"
custom:contentInsetEnd="0dp"
custom:contentInsetStart="0dp">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Andrea Weds Ernest"
    android:textColor="@color/white"
    android:textSize="20dp"
    android:layout_marginLeft="5dp"/>
</android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/txtIdeas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="35dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/BrideGroom"/>
    <TextView
        android:id="@+id/txtTechnical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="35dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/Bride"/>

    <TextView
        android:id="@+id/finance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="35dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/Ideaspartner"/>

    <TextView
        android:id="@+id/life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="35dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/TechincalInput"/>

</LinearLayout>
